[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/OptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/Menu.tres" type="Theme" id=2]
[ext_resource path="res://assets/fonts/noto-sans/NotoSansRegular.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[node name="OptionsMenu" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 300.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Margin" ]

[node name="ScrollContainer" type="ScrollContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
scroll_horizontal_enabled = true
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0
_sections_unfolded = [ "Margin", "Rect", "Scroll", "Size Flags", "Theme" ]

[node name="HUDPanel" type="Panel" parent="ScrollContainer" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1140.0
margin_bottom = 1080.0
rect_min_size = Vector2( 1140, 1080 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 1 )
_sections_unfolded = [ "Margin", "Rect", "Size Flags", "Theme", "Visibility", "custom_styles" ]

[node name="HUDPrimaryColor" type="ColorPickerButton" parent="ScrollContainer/HUDPanel" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 609.0
margin_top = 185.0
margin_right = 729.0
margin_bottom = 225.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Primary"
flat = false
align = 1
color = Color( 1, 1, 1, 1 )
edit_alpha = true
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="Label" type="Label" parent="ScrollContainer/HUDPanel/HUDPrimaryColor" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -186.0
margin_right = -23.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "HUD primary color:"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="HUDSecondaryColor" type="ColorPickerButton" parent="ScrollContainer/HUDPanel" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 609.0
margin_top = 255.0
margin_right = 729.0
margin_bottom = 295.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Secondary"
flat = false
align = 1
color = Color( 1, 1, 1, 1 )
edit_alpha = true
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="Label" type="Label" parent="ScrollContainer/HUDPanel/HUDSecondaryColor" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -206.0
margin_right = -23.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "HUD secondary color:"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="HUDTertiaryColor" type="ColorPickerButton" parent="ScrollContainer/HUDPanel" index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 609.0
margin_top = 319.0
margin_right = 729.0
margin_bottom = 359.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Tertiary"
flat = false
align = 1
color = Color( 1, 1, 1, 1 )
edit_alpha = true
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="Label" type="Label" parent="ScrollContainer/HUDPanel/HUDTertiaryColor" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -186.0
margin_right = -23.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "HUD tertiary color:"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="BorderTop" type="Line2D" parent="ScrollContainer" index="1"]

points = PoolVector2Array( 0, 0, 900, 0 )
width = 2.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = 690121825
sharp_limit = 2.0
round_precision = 8
_sections_unfolded = [ "Transform" ]

[node name="SaveButton" type="Button" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 10.0
margin_right = 140.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Save"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[connection signal="resized" from="ScrollContainer" to="." method="_on_ScrollContainer_resized"]

[connection signal="pressed" from="SaveButton" to="." method="_on_SaveButton_pressed"]


